[ADD] ignore .DS_Store 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/ruby,rails
 # Edit at https://www.toptal.com/developers/gitignore?templates=ruby,rails
 
+.DS_Store
+
 ### Rails ###
 *.rbc
 capybara-*.html
